[package]
name = "pegviz"
version = "0.1.0"
authors = ["Amos Wenger <amoswenger@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
debug-backfill = []

[dependencies]
peg = "0.6.2"
argh = "0.1.3"

[dev-dependencies]
assert_cmd = { version = "2.0" }
predicates = { version = "3.0" }
tempfile = "3.15.0"
